2003-04-25  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c:  Tcl_EvalObjv() failed to honor the
	TCL_EVAL_GLOBAL flag when resolving command names.  Tcl_EvalEx
	passed a string rep including leading whitespace and comments
	to TclEvalObjvInternal().

2003-04-25  Andreas Kupries  <andreask@activestate.com>

	* win/tclWinThrd.c: Applied SF patch #727271. This patch changes
	  the code to catch any errors returned by the windows functions
	  handling TLS ASAP instead of waiting to get some mysterious
	  crash later on due to bogus pointers. Patch provided by Joe
	  Mistachkin.

	  This is a stop-gap measure to deal with the low number of ?TLS
	  slots provided by some of the variants of Windows (60-80).

2003-04-21  Don Porter  <dgp@users.sourceforge.net>

	* library/tcltest/tcltest.tcl:  When the return code of a test does
	not meet expectations, report that as the reason for test failure,
	and do not attempt to check the test result for correctness.
	[Bug 725253]

2003-04-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclExecute.c (ExprCallMathFunc): remove incorrect
	extraneous cast from Tcl_WideAsDouble.

2003-04-18  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/open.n:		Moved serial port options from [fconfigure]
	* doc/fconfigure.n:	to [open] as it is up to the creator of a
				channel to describe the channel's special
				config options. [Bug 679010] 

2003-04-16  Don Porter  <dgp@users.sourceforge.net>

	* generic/tcl.h		Made changes so that the "wideInt" Tcl_ObjType
	* generic/tclObj.c	is defined on all platforms, even those where
	* generic/tclPort.h	TCL_WIDE_INT_IS_LONG is defined.  Also made
	the Tcl_Value struct have a wideValue field on all platforms.  This is
	a ***POTENTIAL INCOMPATIBILITY*** for TCL_WIDE_INT_IS_LONG platforms
	because that struct changes size.  This is the same TIP 72
	incompatibility that was seen on other platforms at the 8.4.0 release,
	when this change should have happened as well.  [Bug 713562]
